# haskell-toolbox

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  haskell-toolbox.cabal  index.html
pages/: index.html
src/: GithubGetter.hs  Main.hs  Packages.hs
src/exe/: GitHubProcessor.hs  Main.hs
src/lib/: HaskellToolbox.hs
src/lib/HaskellToolbox/: Packages.hs
templates/: category.html  default.html  index.json  package.html
