name:                haskell-toolbox
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-toolbox#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-toolbox
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, hackage-db, Cabal, containers, text, hakyll
  other-modules:       Packages

