name:                haskell-toolbox
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-toolbox#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-toolbox-main
  hs-source-dirs:      src/exe
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, text, hakyll, haskell-toolbox, containers

executable haskell-toolbox-github-getter
  hs-source-dirs:      src/exe
  main-is:             GithubGetter.hs
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, github, text, aeson, bytestring, time, vector

executable haskell-toolbox-github-processor
  hs-source-dirs:      src/exe
  main-is:             GitHubProcessor.hs
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
  build-depends:       base >= 4.7 && < 5, text, aeson, hackage-db, Cabal, containers,
                       haskell-toolbox, vector, bytestring, directory, unordered-containers,
                       regex-posix, github

library
    hs-source-dirs:      src/lib
    exposed-modules:     HaskellToolbox.Packages
    build-depends:       base >= 4 && < 5, hackage-db, Cabal, containers, text
    ghc-options:         -Wall
    default-language:    Haskell2010
